src/components/common/Common.module.css
/*
 *   Copyright (c) 2023 Mahindra & Mahindra Ltd. 
 *   All rights reserved.
 *   Redistribution and use of any source or binary or in any form, without written approval and permission is prohibited. Please read the Terms of Use, Disclaimer & Privacy Policy on https://www.mahindra.com/
 */
@import url('./global.css');

.fullyCentered {
    display: flex;
    align-items: center;
    justify-content: center;
}

.marT20 {
    margin-top: 20px;
}

.marT30 {
    margin-top: 30px;
}

.marR5 {
    margin-right: 5px;
}

.marR20 {
    margin-right: 20px;
}

.marB20 {
    margin-bottom: 20px;
}

.padT5 {
    padding-top: 5px;
}

.invertIcon {
    transform: scaleX(-1);
}

.lineHeight33 {
    line-height: 33px;
    padding-right: 0 !important;
}

.txtEllipsis {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.text-tooltip {
    position: absolute;
    visibility: hidden;
    opacity: 0;
    transition: opacity 1s ease;
    bottom: 150%;
    padding: 10px;
    border-radius: 2px;
    background: rgb(2, 2, 111);
    color: rgb(255, 255, 255);
    box-shadow: 0px 0px 12px rgba(2, 2, 111, 0.4);
}

.text:hover+.text-tooltip {
    visibility: visible;
    opacity: 1;
    transition: opacity 0.5s ease-in-out;
}

.tooltipAlign {
    display: flex;
    align-items: center;
}

.tooltipAlign>svg {
    margin-left: 5px;
    color: #2782f9;
}

.toolTip :global .ant-tooltip-content .ant-tooltip-inner p {
    padding-left: 12px !important;
}

.toolTip :global .ant-tooltip-content {
    border: 1px solid #2782f9 !important;
    background: #d3edfe;
    border-radius: 4px;
    width: 225px;
}

.toolTip :global .ant-tooltip-arrow::before {
    background: #2782f9;
}

.modelTooltip>svg {
    color: #2782f9;
    position: absolute;
    right: 195px;
    top: 5px;
}

.content :global .ant-tree-show-line .ant-tree-switcher-line-icon svg {
    width: 1.25em;
    height: 1.25em;
}

:global .rc-virtual-list-scrollbar.rc-virtual-list-scrollbar-show {
    display: block !important;
}

:global .rc-virtual-list-scrollbar-thumb {
    background: #c1c1c1 !important;
}

.changeThemeBorder {
    border: 1px solid red;
    border-radius: 4px;
    padding: 5px;
}

.contentHeaderBackground {
    background-color: #f2f2f2;
    border: 1px solid #e6e6e6;
    padding: 8px 20px !important;
    margin-bottom: 20px;
    border-radius: 4px !important;
    font-weight: 500;
}

.borderBottomCorner .contentHeaderBackground {
    border-bottom-left-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
    padding: 12px 8px !important;
}

.contentHeaderBackground .headerText {
    line-height: 34px;
    margin-left: 10px;
    margin-right: 10px;
}

.contentHeaderBackground .headerSelectField :global .ant-input-affix-wrapper,
.contentHeaderBackground .headerSelectField :global .ant-btn-default,
.contentHeaderBackground :global .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
    border-inline-end-width: 0px;
    border-color: transparent;
}

.contentHeaderBackground .headerSelectField :global .ant-btn-default:not(:disabled):active,
.contentHeaderBackground :global .ant-btn-default:not(:disabled):hover,
.contentHeaderBackground :global .ant-input-search .ant-input:focus {
    border-color: transparent;
}

.contentHeaderBackground :global .anticon-close-circle {
    color: #0b0b0c;
    width: 12px;
    height: 12px;
    vertical-align: sub !important;
}

.contentHeaderBackground .headerSelectField :global .ant-btn-default,
.contentHeaderBackground .headerSelectField :global .ant-input-search .ant-input:focus,
.contentHeaderBackground .headerSelectField :global .ant-input-affix-wrapper-focused {
    border-color: transparent;
}

.contentHeaderBackground :global .ant-input-group {
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    border: 1px solid #d9d9d9;
}

.contentHeaderBackground .headerSelectField :global .ant-input-affix-wrapper .ant-input-clear-icon {
    color: #0b0b0c;
}

.contentHeaderBackground :global .ant-input-group:hover {
    border: 1px solid #0b0b0c;
}

.contentHeaderBackground :global .ant-input-group .ant-input:focus,
.contentHeaderBackground :global .ant-input-group .ant-input:hover {
    border-inline-end-width: 0;
}

.contentHeaderBackground :global .ant-input-affix-wrapper:focus,
.contentHeaderBackground :global .ant-input-affix-wrapper-focused {
    box-shadow: 0 0 0 2px rgba(255, 5, 5, 0);
}

.contentHeaderBackground .headingToggle {
    /* min-width: 154px; */
    border: 1px solid #e6e6e6;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    padding: 5px 0;
    display: flex;
    flex-wrap: nowrap;
    /* margin-left: 8px; */
    margin-right: 16px;
}

.contentHeaderBackground .headingToggle :global .ant-btn {
    height: 26px;
    padding: 2px 6px;
}

.autoCompleteContent :global .ant-input-search .ant-input:hover,
.autoCompleteContent :global .ant-input-search .ant-input:focus {
    border-color: transparent;
}

.autoCompleteContent :global .ant-btn-default {
    border-color: transparent;
    background-color: #fff;
}

.contentHeaderBackground :global .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
    height: 36px;
}

.contentHeaderBackground :global .ant-select .ant-select-clear {
    background: #e6e6e6 !important;
}

.autoCompleteContent :global .ant-btn-default:not(:disabled):hover {
    border-color: transparent;
}

/* .datasearh :global .ant-table-wrapper .ant-table-expanded-row-fixed{
    width:100%;
} */

.tableProduct {
    margin-bottom: 20px;
    padding: 0;
}

.datasearh :global .ant-table-wrapper .ant-table-expanded-row-fixed {
    width: 100% !important;
}

.tableProduct .success {
    padding: 2px 6px;
    background: #eefcd2;
    border: 1px solid #70c922;
    border-radius: 4px;
    font-weight: 400;
    font-size: 12px;
    line-height: 20px;
    text-align: center;
    color: #70c922;
}
/* ... */

